utils/ingress-test/ingress-default-backend.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: default-http-backend
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
